--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^31.0.2",
+    "@expo/vector-icons": "^8.1.0",
+    "expo": "^31.0.6",
     "immutable": "^4.0.0-rc.12",
     "native-base": "^2.10.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-vector-icons": "^6.1.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
