--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^8.1.0",
+    "dsteem": "^0.11.2",
     "expo": "^31.0.6",
     "immutable": "^4.0.0-rc.12",
     "native-base": "^2.10.0",
